# bigger_picker

./: .env-example  .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  webapp.py
.github/workflows/: build_docs.yml  ruff.yml  test.yml
assets/: glossary.md  inclusion_exclusion_criteria.md
bigger_picker/: airtable.py  asana.py  cli.py  config.py  credentials.py  datamodels.py  integration.py  openai.py  rayyan.py  sync.py  utils.py
cli/: index.html
docs/: cli.md  index.md
docs/manual/: data_management.md  extraction.md  extraction_addremove.md  extraction_addvalidated.md  extraction_dedupe.md  extraction_exclude.md  extraction_other.md  extraction_overview.md  extraction_process.md  index.md  screening.md  screening_overview.md  screening_process.md
docs/stylesheets/: extra.css
manual/: index.html
manual/data_management/: index.html
manual/extraction_addremove/: index.html
manual/extraction_addvalidated/: index.html
manual/extraction_dedupe/: index.html
manual/extraction_exclude/: index.html
manual/extraction_overview/: index.html
manual/extraction_process/: index.html
manual/screening_overview/: index.html
manual/screening_process/: index.html
notebooks/: SDQ.ipynb  additional_searches.ipynb  ottoSR.ipynb
scripts/: register_webhook.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_airtable.py  test_asana.py  test_batchtracker.py  test_credentials.py  test_datamodels.py  test_integration.py  test_openai.py  test_rayyan.py  test_utils.py
