[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigger_picker"
version = "0.2.0"
description = "A simple set of tools to link Rayyan, Airtable, Asana, and OpenAI for supporting the Bigger Picture project."
authors = [{ name = "Taren Sanders", email = "taren.sanders@acu.edu.au" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asana",
    "dotenv",
    "openai",
    "pandas",
    "pyairtable",
    "pydantic",
    "rayyan-sdk",
    "recordlinkage",
    "typer",
]

[project.optional-dependencies]
dev = ["jupyter", "pytest", "pytest-cov", "ruff"]

docs = [
    "mkdocs",
    "mkdocs-click",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-glightbox",
    "mkdocs-material",
]

web = ["flask", "gunicorn"]

[project.scripts]
bigger-picker = "bigger_picker.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "__pycache__", "scratch*"]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors 
    "F",  # pyflakes 
    "I",  # isort 
    "B",  # flake8-bugbear 
    "UP", # pyupgrade 

]
